FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20150528:
AUTHOR: mat@FreeBSD.org
  
  USE_GITHUB can now fetch multiple distfiles.  It uses a grouping feature
  similar to MASTER_SITES/PATCH_SITES.
  
  Some helpful variables are provided: WRKSRC_<group> for putting things in the
  right place in post-extract, and DISTNAME_<group>/DISTFILE_<group> for use
  with EXTRACT_ONLY.

  A simple example:

    PORTNAME=     bar
    PORTVERSION=  1.0
    USE_GITHUB= yes
    GH_ACCOUNT= foo
    GH_PROJECT= ${PORTNAME}-images:images

    post-extract:
	    @${MV} ${WRKSRC_images} ${WRKSRC}/images

  It will fetch those two distfiles:

    $ make fetch-urlall-list
    https://codeload.github.com/foo/bar/tar.gz/1.0?dummy=/foo-bar-1.0_GH0.tar.gz
    https://codeload.github.com/foo/bar-images/tar.gz/1.0?dummy=/foo-bar-images-1.0-1.0.tar.gz

  It will then extract them to ${WRKDIR} in their respectives directories.

20150526:
AUTHOR: antoine@FreeBSD.org

  PYTHON_REL has been switched from a 3 digits number to a 4 digits number to
  handle python 2.7.10.  Ports checking for python 2.7.9 should compare
  PYTHON_REL against 2709 and ports checking for python 2.7.10 should compare
  PYTHON_REL against 2710.

20150521:
AUTHOR: mat@FreeBSD.org

  GH_COMMIT support has been removed, see the 20150319 for more informations.

20150419:
AUTHOR: tijl@FreeBSD.org

  USE_AUTOTOOLS has been deprecated.  It can be replaced with USES=autoreconf
  and GNU_CONFIGURE=yes.

  Support for USE_AUTOTOOLS=libtoolize has been removed.  It can be replaced
  with "USES=autoreconf libtool".

20150409:
AUTHOR: bapt@FreeBSD.org

  Add a new USES=gnustep to handle the GNUstep ports. Now the dependencies on